fix double scroll issue #3069 (#3110)

--- a/src/sass/composer.scss
+++ b/src/sass/composer.scss
@@ -74,6 +74,8 @@
 	      display: flex;
 	      display: -webkit-flex;
 
+	      max-height: 100%; /* scroll issue with attachments */
+
 	      -webkit-flex-direction: column;
 	      flex-direction: column;
 		}
